// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SLD Render Manifest Golden (Step VII) > pv_bess: matches golden snapshot artifact 1`] = `
{
  "edges": [
    {
      "edgeId": "edge_gen_gen_bess",
      "edgeType": "BRANCH",
      "isNormallyOpen": false,
      "laneIndex": 0,
      "segmentCount": 2,
      "strokeWidth": 2.5,
      "totalLengthPx": 860,
    },
    {
      "edgeId": "edge_gen_gen_pv",
      "edgeType": "BRANCH",
      "isNormallyOpen": false,
      "laneIndex": 0,
      "segmentCount": 2,
      "strokeWidth": 2.5,
      "totalLengthPx": 1140,
    },
    {
      "edgeId": "edge_line_g_sn",
      "edgeType": "TRUNK",
      "isNormallyOpen": false,
      "laneIndex": 0,
      "segmentCount": 1,
      "strokeWidth": 2.5,
      "totalLengthPx": 140,
    },
    {
      "edgeId": "edge_load_load_nn",
      "edgeType": "BRANCH",
      "isNormallyOpen": false,
      "laneIndex": 0,
      "segmentCount": 1,
      "strokeWidth": 2.5,
      "totalLengthPx": 140,
    },
    {
      "edgeId": "edge_src_src_gpz",
      "edgeType": "TRUNK",
      "isNormallyOpen": false,
      "laneIndex": 0,
      "segmentCount": 1,
      "strokeWidth": 2.5,
      "totalLengthPx": 300,
    },
    {
      "edgeId": "edge_tr_oze",
      "edgeType": "TRANSFORMER_LINK",
      "isNormallyOpen": false,
      "laneIndex": 0,
      "segmentCount": 1,
      "strokeWidth": 2.5,
      "totalLengthPx": 100,
    },
  ],
  "layoutHash": "bdf6d574",
  "nodes": [
    {
      "elementType": "Bus",
      "height": 10,
      "hierarchyLevel": "structure",
      "layer": 1,
      "nodeId": "bus_gpz",
      "nodeType": "BUS_SN",
      "strokeWidth": 5,
      "voltageColor": "#1D4ED8",
      "width": 600,
      "x": 320,
      "y": 300,
    },
    {
      "elementType": "Bus",
      "height": 10,
      "hierarchyLevel": "structure",
      "layer": 4,
      "nodeId": "bus_nn",
      "nodeType": "BUS_NN",
      "strokeWidth": 5,
      "voltageColor": "#B45309",
      "width": 120,
      "x": 300,
      "y": 560,
    },
    {
      "elementType": "Bus",
      "height": 10,
      "hierarchyLevel": "structure",
      "layer": 4,
      "nodeId": "bus_sn",
      "nodeType": "BUS_SN",
      "strokeWidth": 5,
      "voltageColor": "#1D4ED8",
      "width": 120,
      "x": 300,
      "y": 460,
    },
    {
      "elementType": "GENERATOR",
      "height": 60,
      "hierarchyLevel": "topology",
      "layer": 0,
      "nodeId": "gen_bess",
      "nodeType": "GENERATOR_BESS",
      "strokeWidth": 2.5,
      "voltageColor": "#374151",
      "width": 60,
      "x": 600,
      "y": -60,
    },
    {
      "elementType": "GENERATOR",
      "height": 60,
      "hierarchyLevel": "topology",
      "layer": 0,
      "nodeId": "gen_pv",
      "nodeType": "GENERATOR_PV",
      "strokeWidth": 2.5,
      "voltageColor": "#374151",
      "width": 60,
      "x": 880,
      "y": -60,
    },
    {
      "elementType": "Load",
      "height": 60,
      "hierarchyLevel": "topology",
      "layer": 4,
      "nodeId": "load_nn",
      "nodeType": "LOAD",
      "strokeWidth": 2.5,
      "voltageColor": "#374151",
      "width": 60,
      "x": 320,
      "y": 660,
    },
    {
      "elementType": "Source",
      "height": 60,
      "hierarchyLevel": "structure",
      "layer": 0,
      "nodeId": "src_gpz",
      "nodeType": "GRID_SOURCE",
      "strokeWidth": 5,
      "voltageColor": "#374151",
      "width": 60,
      "x": 320,
      "y": -60,
    },
    {
      "elementType": "STATION",
      "height": 160,
      "hierarchyLevel": "topology",
      "layer": 9,
      "nodeId": "st_oze",
      "nodeType": "STATION_SN_NN_B",
      "strokeWidth": 2.5,
      "voltageColor": "#1D4ED8",
      "width": 120,
      "x": 40,
      "y": 1260,
    },
  ],
  "scenarioId": "pv_bess",
  "specVersion": "1.0",
  "styleTokenHash": "e53cef0fa145ad2db2e47172828930e2c81ef627ccf00c34a7e47d5350e170c1",
  "visualGraphHash": "65ac8dff",
  "visualTopologySummary": {
    "gpz": 1,
    "nopy": 0,
    "polaSn": 3,
    "punktyRozgalezien": 0,
    "ringi": 0,
    "segmentyMagistrali": 1,
    "segmentyOdgalezien": 0,
    "stacje": 1,
    "szynySn": 2,
  },
}
`;

exports[`SLD Render Manifest Golden (Step VII) > radial: matches golden snapshot artifact 1`] = `
{
  "edges": [
    {
      "edgeId": "edge_line_gpz_st1",
      "edgeType": "TRUNK",
      "isNormallyOpen": false,
      "laneIndex": 0,
      "segmentCount": 1,
      "strokeWidth": 2.5,
      "totalLengthPx": 140,
    },
    {
      "edgeId": "edge_load_load_st1",
      "edgeType": "BRANCH",
      "isNormallyOpen": false,
      "laneIndex": 0,
      "segmentCount": 1,
      "strokeWidth": 2.5,
      "totalLengthPx": 140,
    },
    {
      "edgeId": "edge_src_src_gpz",
      "edgeType": "TRUNK",
      "isNormallyOpen": false,
      "laneIndex": 0,
      "segmentCount": 1,
      "strokeWidth": 2.5,
      "totalLengthPx": 300,
    },
    {
      "edgeId": "edge_tr_st1",
      "edgeType": "TRANSFORMER_LINK",
      "isNormallyOpen": false,
      "laneIndex": 0,
      "segmentCount": 1,
      "strokeWidth": 2.5,
      "totalLengthPx": 100,
    },
  ],
  "layoutHash": "9556453b",
  "nodes": [
    {
      "elementType": "Bus",
      "height": 10,
      "hierarchyLevel": "structure",
      "layer": 1,
      "nodeId": "bus_gpz",
      "nodeType": "BUS_SN",
      "strokeWidth": 5,
      "voltageColor": "#1D4ED8",
      "width": 400,
      "x": 320,
      "y": 300,
    },
    {
      "elementType": "Bus",
      "height": 10,
      "hierarchyLevel": "structure",
      "layer": 4,
      "nodeId": "bus_st1_nn",
      "nodeType": "BUS_NN",
      "strokeWidth": 5,
      "voltageColor": "#B45309",
      "width": 120,
      "x": 300,
      "y": 560,
    },
    {
      "elementType": "Bus",
      "height": 10,
      "hierarchyLevel": "structure",
      "layer": 4,
      "nodeId": "bus_st1_sn",
      "nodeType": "BUS_SN",
      "strokeWidth": 5,
      "voltageColor": "#1D4ED8",
      "width": 120,
      "x": 300,
      "y": 460,
    },
    {
      "elementType": "Load",
      "height": 60,
      "hierarchyLevel": "topology",
      "layer": 4,
      "nodeId": "load_st1",
      "nodeType": "LOAD",
      "strokeWidth": 2.5,
      "voltageColor": "#374151",
      "width": 60,
      "x": 320,
      "y": 660,
    },
    {
      "elementType": "Source",
      "height": 60,
      "hierarchyLevel": "structure",
      "layer": 0,
      "nodeId": "src_gpz",
      "nodeType": "GRID_SOURCE",
      "strokeWidth": 5,
      "voltageColor": "#374151",
      "width": 60,
      "x": 500,
      "y": -60,
    },
    {
      "elementType": "STATION",
      "height": 160,
      "hierarchyLevel": "topology",
      "layer": 9,
      "nodeId": "st1",
      "nodeType": "STATION_SN_NN_B",
      "strokeWidth": 2.5,
      "voltageColor": "#1D4ED8",
      "width": 120,
      "x": 40,
      "y": 1260,
    },
  ],
  "scenarioId": "radial",
  "specVersion": "1.0",
  "styleTokenHash": "e53cef0fa145ad2db2e47172828930e2c81ef627ccf00c34a7e47d5350e170c1",
  "visualGraphHash": "97a8c332",
  "visualTopologySummary": {
    "gpz": 1,
    "nopy": 0,
    "polaSn": 1,
    "punktyRozgalezien": 0,
    "ringi": 0,
    "segmentyMagistrali": 1,
    "segmentyOdgalezien": 0,
    "stacje": 1,
    "szynySn": 2,
  },
}
`;

exports[`SLD Render Manifest Golden (Step VII) > ring_nop: matches golden snapshot artifact 1`] = `
{
  "edges": [
    {
      "edgeId": "edge_line_g_r1",
      "edgeType": "TRUNK",
      "isNormallyOpen": false,
      "laneIndex": 0,
      "segmentCount": 1,
      "strokeWidth": 2.5,
      "totalLengthPx": 140,
    },
    {
      "edgeId": "edge_line_r1_r2",
      "edgeType": "TRUNK",
      "isNormallyOpen": false,
      "laneIndex": 0,
      "segmentCount": 1,
      "strokeWidth": 2.5,
      "totalLengthPx": 100,
    },
    {
      "edgeId": "edge_line_r2_r3",
      "edgeType": "TRUNK",
      "isNormallyOpen": false,
      "laneIndex": 0,
      "segmentCount": 1,
      "strokeWidth": 2.5,
      "totalLengthPx": 100,
    },
    {
      "edgeId": "edge_load_load_r2",
      "edgeType": "BRANCH",
      "isNormallyOpen": false,
      "laneIndex": 0,
      "segmentCount": 1,
      "strokeWidth": 2.5,
      "totalLengthPx": 140,
    },
    {
      "edgeId": "edge_load_load_r3",
      "edgeType": "BRANCH",
      "isNormallyOpen": false,
      "laneIndex": 0,
      "segmentCount": 1,
      "strokeWidth": 2.5,
      "totalLengthPx": 140,
    },
    {
      "edgeId": "edge_nop_r3_g",
      "edgeType": "SECONDARY_CONNECTOR",
      "isNormallyOpen": true,
      "laneIndex": 0,
      "segmentCount": 3,
      "strokeWidth": 1.5,
      "totalLengthPx": 540,
    },
    {
      "edgeId": "edge_src_src_gpz",
      "edgeType": "TRUNK",
      "isNormallyOpen": false,
      "laneIndex": 0,
      "segmentCount": 1,
      "strokeWidth": 2.5,
      "totalLengthPx": 300,
    },
  ],
  "layoutHash": "53f7a496",
  "nodes": [
    {
      "elementType": "Bus",
      "height": 10,
      "hierarchyLevel": "structure",
      "layer": 1,
      "nodeId": "bus_gpz",
      "nodeType": "BUS_SN",
      "strokeWidth": 5,
      "voltageColor": "#1D4ED8",
      "width": 400,
      "x": 320,
      "y": 300,
    },
    {
      "elementType": "Bus",
      "height": 10,
      "hierarchyLevel": "structure",
      "layer": 4,
      "nodeId": "bus_r1",
      "nodeType": "BUS_SN",
      "strokeWidth": 5,
      "voltageColor": "#1D4ED8",
      "width": 120,
      "x": 300,
      "y": 460,
    },
    {
      "elementType": "Bus",
      "height": 10,
      "hierarchyLevel": "structure",
      "layer": 4,
      "nodeId": "bus_r2",
      "nodeType": "BUS_SN",
      "strokeWidth": 5,
      "voltageColor": "#1D4ED8",
      "width": 120,
      "x": 300,
      "y": 560,
    },
    {
      "elementType": "Bus",
      "height": 10,
      "hierarchyLevel": "structure",
      "layer": 4,
      "nodeId": "bus_r3",
      "nodeType": "BUS_SN",
      "strokeWidth": 5,
      "voltageColor": "#1D4ED8",
      "width": 120,
      "x": 300,
      "y": 660,
    },
    {
      "elementType": "Load",
      "height": 60,
      "hierarchyLevel": "topology",
      "layer": 4,
      "nodeId": "load_r2",
      "nodeType": "LOAD",
      "strokeWidth": 2.5,
      "voltageColor": "#374151",
      "width": 60,
      "x": 320,
      "y": 700,
    },
    {
      "elementType": "Load",
      "height": 60,
      "hierarchyLevel": "topology",
      "layer": 4,
      "nodeId": "load_r3",
      "nodeType": "LOAD",
      "strokeWidth": 2.5,
      "voltageColor": "#374151",
      "width": 60,
      "x": 320,
      "y": 760,
    },
    {
      "elementType": "Source",
      "height": 60,
      "hierarchyLevel": "structure",
      "layer": 0,
      "nodeId": "src_gpz",
      "nodeType": "GRID_SOURCE",
      "strokeWidth": 5,
      "voltageColor": "#374151",
      "width": 60,
      "x": 500,
      "y": -60,
    },
  ],
  "scenarioId": "ring_nop",
  "specVersion": "1.0",
  "styleTokenHash": "e53cef0fa145ad2db2e47172828930e2c81ef627ccf00c34a7e47d5350e170c1",
  "visualGraphHash": "85937d1f",
  "visualTopologySummary": {
    "gpz": 1,
    "nopy": 1,
    "polaSn": 0,
    "punktyRozgalezien": 0,
    "ringi": 1,
    "segmentyMagistrali": 3,
    "segmentyOdgalezien": 0,
    "stacje": 0,
    "szynySn": 4,
  },
}
`;
